tests/snapshots/edit__changes.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change.clone()).unwrap().unwrap()
info:
  flake_nix: ""
  changes: []
---
{
  description = "test file";

  inputs = {
    vmsh.url = "mic92/vmsh";
    naersk = {
      url = "github:nix-community/naersk/master";
      inputs.nixpkgs.follows = "nixpkgs";
    };
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    utils.url = "github:numtide/flake-utils";
    flake-compat = {
      url = "github:edolstra/flake-compat";
      flake = false;
    };
  };

  outputs =
    {
      self,
      nixpkgs,
      utils,
      naersk,
      flake-compat,
      , vmsh
    }:
    { };
}
