tests/snapshots/edit__completely_flat_toplevel_add_id_uri_no_flake.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change).unwrap().unwrap()
info:
  flake_nix: ""
  changes:
    - Add:
        id: not_a_flake
        uri: "github:a-kenji/not_a_flake"
        flake: false
---
{ 
  description = "Edit your flake inputs with ease";

  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
  inputs.flake-utelinos.url = "github:numtide/flake-utils";
  inputs.rust-overlay.url = "github:oxalica/rust-overlay";
  inputs.rust-overlay.inputs.nixpkgs.follows = "nixpkgs";
  inputs.rust-overlay.inputs.flake-utils.follows = "flake-utils";
  inputs.crane.url = "github:ipetkov/crane";
  inputs.crane.inputs.nixpkgs.follows = "nixpkgs";
  inputs.crane.inputs.rust-overlay.follows = "rust-overlay";
  inputs.crane.inputs.flake-utils.follows = "flake-utils";
  inputs.not_a_flake.url = "github:a-kenji/not_a_flake";
  inputs.not_a_flake.flake = false;

  outputs = _: { };
}
