tests/snapshots/edit__completely_flat_toplevel_rm_toplevel_multiple.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change).unwrap().unwrap()
info:
  flake_nix: ""
  changes:
    - Remove:
        id: crane
---
{
  description = "Edit your flake inputs with ease";

  inputs.nixpkgs.url = "github:nixos/nixpkgs/nixos-unstable";
  inputs.flake-utelinos.url = "github:numtide/flake-utils";
  inputs.rust-overlay.url = "github:oxalica/rust-overlay";
  inputs.rust-overlay.inputs.nixpkgs.follows = "nixpkgs";
  inputs.rust-overlay.inputs.flake-utils.follows = "flake-utils";

  outputs = _: { };
}
