tests/snapshots/edit__first_nested_node_remove_multiple.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change.clone()).unwrap().unwrap()
info:
  flake_nix: ""
  changes:
    - Remove:
        id: naersk
---
{
  description = "test file";

  inputs = {
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    utils.url = "github:numtide/flake-utils";
    flake-compat = {
      url = "github:edolstra/flake-compat";
      flake = false;
    };
  };

  outputs = { self, nixpkgs, utils, naersk, flake-compat }:
  {};
}
