tests/snapshots/edit__first_nested_node_remove_single.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change.clone()).unwrap().unwrap()
info:
  flake_nix: ""
  changes:
    - Remove:
        id: utils
---
{
  description = "test file";

  inputs = {
    naersk = {
      url = "github:nix-community/naersk/master";
      inputs.nixpkgs.follows = "nixpkgs";
    };
    nixpkgs.url = "github:NixOS/nixpkgs/nixpkgs-unstable";
    flake-compat = {
      url = "github:edolstra/flake-compat";
      flake = false;
    };
  };

  outputs =
    {
      self,
      nixpkgs,
      naersk,
      flake-compat,
    }:
    { };
}
