tests/snapshots/edit__flat_nested_flat_add_single_no_flake.snap
---
source: tests/edit.rs
expression: flake_edit.apply_change(change).unwrap().unwrap()
info:
  flake_nix: ""
  changes: []
---
{ 
  description = "flat nested flat test";

  inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
  inputs.flake-utils.url = "github:numtide/flake-utils/master";
  inputs.poetry2nix = {
    inputs.flake-utils.follows = "flake-utils";
    inputs.nixpkgs.follows = "nixpkgs";
    url = "github:nix-community/poetry2nix/master";
  };
  inputs.not_a_flake.url = "github:a-kenji/not_a_flake";
  inputs.not_a_flake.flake = false;

  outputs = { self, nixpkgs, flake-utils, poetry2nix, }: { };
}
